fix: add max-width to articles
The code elements were overflowing in mobile.
This fixes it by setting max-width to 100% for the containing
element (.article).

--- a/src/_includes/critical.css
+++ b/src/_includes/critical.css
@@ -177,6 +177,10 @@ a:hover {
   margin-top: auto;
 }
 
+.article {
+  max-width: 100%;
+}
+
 .article p {
   font-size: 1.125rem;
   line-height: 1.5625rem;
